Stats menu bindings

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -8,3 +8,9 @@ startdemos "menu.dem"
 //KEYBINDS - Change to your liking
 
 bind "mouse2" "+impulseuse"  //Altfire key - IMPORTANT
+
+bind "HOME" "impulse 80"	//open stats menu
+bind "PGUP" "impulse 81"	//menu up
+bind "PGDN" "impulse 82"	//menu down
+bind "ENTER" "impulse 83"	//menu use point
+bind "END" "impulse 84"		//menu dump all points
