--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -3,14 +3,15 @@
 alias "+impulseuse" "impulse 144"
 alias "-impulseuse" "impulse 145"
 
-startdemos "menu.dem"
+startdemos "pmenu.dem"
 
 //KEYBINDS - Change to your liking
 
 bind "mouse4" "+impulseuse"  //Altfire key - IMPORTANT
 
 bind "HOME" "impulse 80"	//open stats menu
+bind "END" "impulse 85"		//open options menu
 bind "PGUP" "impulse 81"	//menu up
 bind "PGDN" "impulse 82"	//menu down
-bind "ENTER" "impulse 83"	//menu use point
-bind "END" "impulse 84"		//menu dump all points
+bind "ENTER" "impulse 83"	//menu use point / toggle option
+bind "DELETE" "impulse 84"	//menu dump all points
