--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -3,7 +3,7 @@
 alias "+impulseuse" "impulse 144"
 alias "-impulseuse" "impulse 145"
 
-startdemos "pmenu.dem"
+startdemos "menu.dem"
 
 //KEYBINDS - Change to your liking
 
